--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Eventify</title>
+    <meta name="theme-color" content="#3e4245" />
   </head>
   <body>
     <noscript>
