Auth and retrieve saved barcodes

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">    
     <script src="https://use.fontawesome.com/36c1604ff9.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="983270735462-47najr02dnhj4niuoh91d7mjjjhfitp3.apps.googleusercontent.com">
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
